# pyavm

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  CHANGES.md  LICENSE  MANIFEST.in  README  README.md  README.rst  avm.py  index.html  params.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  update-changelog.yaml
pyavm/: __init__.py  avm.py  cv.py  datatypes.py  embed.py  exceptions.py  extract.py  jpeg.py  parser.py  png.py  specs.py  wcs_utils.py  writer.py
pyavm/tests/: test_avm.py  test_header.py  test_io.py  test_main.py  test_parse.py  test_specs.py  test_wcs_utils.py
pyavm/tests/data/: 3c321.avm.xml  a3627_wcs_metadata.xml  example_header.hdr  heic0409a.xml  heic0515a.xml  kes75.xml  n132d.xml  opo0613a.xml  sig05-002a.xml  sig05-003a.xml  sig05-004a.xml  sig05-011.xml  sig05-013.xml  sig05-014.xml  sig05-015.xml  sig05-016.xml  sig05-017.xml  sig05-019b.xml  sig05-019d.xml  sig05-021-alpha.xml  sig05-021.xml  sig05-028a.xml  sig05-028b.xml  sig05-028c.xml  sig06-003.xml  sig06-010.xml  sig06-012b.xml  sig06-012c.xml  sig06-013.xml  sig06-021a.xml  sig06-027.xml  sig07-006.xml  sig07-009.xml  sig07-016.xml  snr0509_xray.xml  ssc2003-06b1.xml  ssc2003-06b2.xml  ssc2003-06c1.xml  ssc2003-06d1.xml  ssc2003-06d3.xml  (+32 more)
tests/: README.md  download.py  example_urls.txt  test.py  test_remote.py
