[project]
name = "PyAVM"
description = "Simple pure-python AVM meta-data handling"
readme = "README.rst"
keywords = [
    "Scientific/Engineering",
]
license = { text = "MIT" }
authors = [
    { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
testall = [
    "astropy",
    "numpy",
    "pillow",
]

[project.urls]
documentation = "http://astrofrog.github.io/pyavm/"
homepage = "http://astrofrog.github.io/pyavm/"
repository = "https://github.com/astrofrog/pyavm"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyavm/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyavm",
]
