[project]
name = "PyAVM"
description = "Simple pure-python AVM meta-data handling"
readme = "README.rst"
keywords = [
    "Scientific/Engineering",
]
license = { text = "MIT" }
authors = [
    { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
testall = [
    "astropy",
    "numpy",
    "pillow",
]

[project.urls]
documentation = "http://astrofrog.github.io/pyavm/"
homepage = "http://astrofrog.github.io/pyavm/"
repository = "https://github.com/astrofrog/pyavm"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyavm/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyavm",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
]
ignore = [
    "E501",   # line too long (let formatter handle it)
    "E721",   # type comparison (use isinstance)
    "E722",   # bare except
    "E741",   # ambiguous variable name
    "F405",   # name may be undefined from star imports
]

[tool.ruff.lint.per-file-ignores]
"pyavm/avm.py" = ["E402"]  # imports not at top (intentional structure)
"pyavm/specs.py" = ["F403"]  # star imports used intentionally
"pyavm/tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["pyavm"]
